# notification-service

./: Cargo.toml
migrations/: 0001_messages_table.sql
src/: ctx.rs  errors.rs  main.rs
src/controllers/: message.rs  mod.rs  mw_auth.rs  user.rs
src/models/: message.rs
